# ollama-rag-memory

./: .env.example  .gitignore  README.md  description.txt  main.py  pyproject.toml
src/ollama_middle_layer/: __main__.py  app.py  bootstrap.py  config.py  context_pipeline.py  gpu.py  ollama_clients.py  pruning.py  storage.py
src/ollama_middle_layer/web/: app.js  index.html  styles.css
tests/: test_bootstrap.py  test_context_pipeline.py  test_conversation_id.py  test_gpu.py  test_openapi.py  test_pruning.py  test_storage.py  test_ui_stream.py
