[project]
name = "ollama-middle-layer"
version = "0.1.0"
description = "Local Ollama context-pruning middleware with ChromaDB retrieval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "ollama>=0.3.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ollama-middle-layer = "ollama_middle_layer.__main__:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ollama_middle_layer = ["web/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
